# SSL.io

./: .gitignore  CMakeLists.txt  ECS_Engine.sln  ECS_Engine.vcxproj  ECS_Engine.vcxproj.filters  README.md  main.cpp
ECS/: Engine.h  Engine.hpp  ecs.hpp
ECS/src/core/: ComponentArray.hpp  ComponentManager.h  ECSManager.h  ECSManager.hpp  EntityManager.h  EventBus.hpp  Looper.h  Looper.hpp  System.h  System.hpp  SystemManager.h  SystemManager.hpp  Types.h
ECS/src/flecs alike/: Context.hpp  Entity.hpp  EntityIterator.hpp  EntityManager.hpp  ISystemManager.hpp  Looper.hpp  System.hpp  SystemBuilder.hpp  SystemManager.hpp  event_bus.hpp
ECS/src/flecs_alike/: context.hpp  entity.hpp  entity_manager.hpp  event_bus.hpp  iterator.hpp  looper.hpp  system.hpp  system_manager.hpp
Example/: Example.h  Example2.h  ExampleGame.h
